Chore: Migrate to ESLint
Migrate Angular Tslint to ESLint

--- a/projects/ngx-nomad-form/package.json
+++ b/projects/ngx-nomad-form/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-nomad-form",
+  "name": "@ngx-nomad-form",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^11.0.9",
