--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-lib": "ng build",
+    "build-lib": "ng build --prod",
     "npm-pack": "cd dist/@ngx-nomad-form && npm pack",
     "package": "npm run build-lib && npm run npm-pack"
   },
